Fixed some formatting issues on smaller browsers

--- a/blog/static/css/main.css
+++ b/blog/static/css/main.css
@@ -2,7 +2,7 @@
 	padding-top: 15%;
 }
 
-@media (min-width:850px) {
+@media (min-width:1368px) {
 	.right {
 		position:fixed;
 		right:0;
